Preethi, Dev | #0000 | fixing styling for patient list page. (some table rows were hidden by footer)

--- a/whp-web/src/main/webapp/styles/standard.css
+++ b/whp-web/src/main/webapp/styles/standard.css
@@ -4,6 +4,7 @@ body {
 
 #mainContent {
     margin-top: 20px;
+    margin-bottom: 70px;
 }
 
 #footer {
